[package]
name = "tui_TODO"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.26", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
rand = {version = "0.7.3", features = ["std"], default-feature = false}
tui = {version = "0.19", features = ['crossterm', 'serde'], default-feature = false}
thiserror = "1.0"
